<resources>
    <string name="app_name">AppSmartCupon</string>

    <string name="parrafo_login">Nos alegra verte aquí de nuevo, por favor ingresa tu correo y contraseña.</string>
    <string name="titulo_login">¡Bienvenido de vuelta!</string>
    <string name="correo_login">Correo electronico</string>
    <string name="contrasenia_login">Contraseña</string>
    <string name="ingresar_login">Ingresar</string>

    <string name="regresar_registrar">Regresar</string>
    <string name="titulo_registrar">Crea una cuenta</string>
    <string name="parrafo_registrar">¡Crear tu cuenta no tomará mas de dos minutos!</string>
    <string name="nombre_registrar">Nombre</string>
    <string name="apellidop_registrar">Apellido paterno</string>
    <string name="apellidom_registrar">Apellido materno</string>
    <string name="telefono_registrar">Teléfono</string>
    <string name="calle_registrar">Calle</string>
    <string name="numero_registrar">Número</string>
    <string name="fecha_registrar">Fecha de Nacimiento. Ej. 2023-12-25</string>
    <string name="crear_cuenta_registrar">Crear cuenta</string>

    <string name="parrafo_home">Home</string>
    <string name="titulo_home">Hola 👋. Encuentra las mejores promociones.</string>
    <string name="categoria_home">Categorías</string>
    <string name="lista_promocion_home">Lista de promociones</string>
    <string name="busqueda_promocion_home">Búsqueda de promociones</string>

    <string name="titulo_editar">Modificar cuenta</string>
    <string name="parrafo_editar">¡Modificar tu cuenta no tomará mas de dos minutos!</string>
    <string name="boton_editar">Editar cuenta</string>

    <string name="titulo_categoria">Categorías</string>

    <string name="titulo_promocion">Promociones</string>
    <string name="error_promocion">No hay promociones</string>

    <string name="titulo_detalle_promocion">Detalle de la promoción</string>
    <string name="tipo_detalle_promocion">Tipo de promocion</string>
    <string name="cupones_detalle_promocion">Cupones disponibles</string>
    <string name="codigo_detalle_promocion">Código</string>
    <string name="descripcion_detalle_promocion">Descripción</string>
    <string name="restriccion_detalle_promocion">Restricciones</string>
    <string name="fecha_detalle_promocion">Fecha de la promoción</string>
    <string name="sucursal_detalle_promocion">Sucursales válidas</string>
    <string name="lorem_detalle_promocion">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dapibus justo et urna tincidunt, ac venenatis libero fermentum. Quisque nec est ut neque eleifend malesuada. Integer facilisis eu metus nec dapibus</string>

    <string name="titulo_busqueda">Búsqueda</string>
    <string name="input_busqueda">Ingresa la fecha. Ej. 2023-12-31</string>
    <string name="boton_busqueda">Buscar</string>
</resources>