<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategoriasActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/titulo_busqueda"
        android:textAlignment="center"
        android:textColor="@color/negro"
        android:textSize="25dp" />

    <Spinner
        android:id="@+id/spBusqueda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="5dp"/>

    <EditText
        android:id="@+id/edtFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_input"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/input_busqueda"
        android:padding="15dp"
        android:textColor="@color/gris" />

    <Button
        android:id="@+id/btnBusqueda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:letterSpacing="0"
        android:paddingVertical="10dp"
        android:text="@string/boton_busqueda"
        android:textAllCaps="false"
        android:textColor="@color/negro"
        android:textSize="20dp"
        android:backgroundTint="@color/amarillo"/>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/error_promocion"
        android:textColor="@color/gris"
        android:textSize="16dp"
        android:textAlignment="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_promocionesEmpresa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp" />


</LinearLayout>