<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_home"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parrafo_home"
                android:fontFamily="@font/poppins_medium"
                android:textSize="25dp"
                android:textColor="@color/negro"
                />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnCliente"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_user"
            android:background="@drawable/custom_input"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_Usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/titulo_home"
        android:textSize="30dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/negro"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/img_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_input"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_category"
            android:padding="10dp"
            android:background="@drawable/custom_bg"
            android:layout_marginRight="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria_home"
            android:textSize="20dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/negro"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnCategorias"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/img_arrow_right"
            android:background="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_input"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_list"
            android:padding="10dp"
            android:background="@drawable/custom_bg"
            android:layout_marginRight="15dp"
            />

        <TextView
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/lista_promocion_home"
            android:textColor="@color/negro"
            android:textSize="20dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnListaPromociones"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/img_arrow_right"
            android:background="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_input"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_search"
            android:padding="10dp"
            android:background="@drawable/custom_bg"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/busqueda_promocion_home"
            android:textColor="@color/negro"
            android:textSize="20dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnBusquedaPromociones"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/img_arrow_right"
            android:background="@color/white" />

    </LinearLayout>

</LinearLayout>